<resources>
    <string name="app_name">WingDroid</string>

    <!-- order -->
    <string name="order_by_recent">Recent</string>
    <string name="order_by_star">Star</string>

    <!-- bottom nav items  -->
    <string name="nav_feed">FEED</string>
    <string name="nav_search">SEARCH</string>
    <string name="nav_news">NEWS</string>
    <string name="nav_bookmark">BOOKMARK</string>

    <string name="description_select_sort_criteria">Select sort criteria of list</string>
    <string name="description_repository_filter">Select filter for repositories</string>

    <string name="sort_recent">Recent</string>
    <string name="sort_star">Star</string>
    <string name="sort_match">Match</string>

    <string name="category">Categories</string>
    <string name="suggested_libraries">Suggested Libraries</string>
    <string name="recent_searchs">Recent searchs</string>
    <string name="search_hint">Search Android UI/UX library</string>

    <string name="news_new">New</string>
    <string name="news_events">Events about your Bookmark</string>


    <string name="detail_issues">Issue</string>
    <string name="detail_watches">Watch</string>
    <string name="detail_github">Github</string>
    <string name="detail_simulate">SIMULATE</string>
    <string name="detail_star">Star</string>
    <string name="detail_fork">Fork</string>

    <string name="related_libraries">Related Libraries</string>


    <string name="transition_story_background" translatable="false">transition_story_background</string>

    <string name="empty_bookmark">No bookmarks, yet</string>
    <string name="empty_search_history">No histories, yet</string>
    <string name="empty_search_result">No result found.</string>
    <string name="empty_issue">No issue about your bookmarks.</string>

    <string name="filter_release">RELEASE</string>
    <string name="filter_push">PUSH</string>
    <string name="filter_all">ALL</string>



    <!-- Toast message string -->
    <string name="toast_message_no_auth"></string>
    <string name="toast_message_bookmark_added">Added</string>
    <string name="toast_message_bookmark_deleted">Deleted</string>






</resources>
