<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_feed"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/nav_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_news"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_bookmark"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_bookmark" />
</menu>