<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_select_sort_criteria_height"
        android:background="@color/white"
        android:padding="10dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/dialog_select_sort_criteria_height"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/txtvDescription"
            style="@style/TextStyle.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_select_sort_criteria" />

        <ImageView
            android:layout_width="@dimen/ic_arrow_bottom_width"
            android:layout_height="@dimen/ic_arrow_bottom_hegiht"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_arrow_bottom"
            android:tint="@color/greyDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtvRecent"
                style="@style/TextStyle.Medium"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/none_st_bd_greydark_rad30"
                android:gravity="center"
                android:text="@string/sort_recent"
                android:textColor="@drawable/grey_st_greydark" />

            <TextView
                android:id="@+id/txtvStar"
                style="@style/TextStyle.Medium"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/none_st_bd_greydark_rad30"
                android:gravity="center"
                android:text="@string/sort_star"
                android:textColor="@drawable/grey_st_greydark" />
        </LinearLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>