<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="43dp">

        <SearchView
            android:focusable="false"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:text="@string/search_hint"
            android:textColor="@color/decorate_bd" />

        <ImageView
            android:id="@+id/imgvEmoji"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/txtvHint"
            android:src="@drawable/ic_emoji_monkey" />
    </RelativeLayout>

    <include layout="@layout/border" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recvCategories"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="10dp" />

            <TextView
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggested_libraries" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recvSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>