<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SearchView
            style="@style/SearchView"
            android:id="@+id/searchView"
            android:nestedScrollingEnabled="false"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="43dp" />
    </RelativeLayout>

    <include layout="@layout/border" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/containerHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    style="@style/TextStyle.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_searchs" />

                <TextView
                    android:id="@+id/txtvNoSearchResult"
                    style="@style/TextStyle.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/empty_search_history"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recvHistories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/containerResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/containerEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/TextStyle.IssueText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_search_result" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recvResults"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>